--- a/58160-HERNANDEZ-JOAQUIN/Dockerfile
+++ b/58160-HERNANDEZ-JOAQUIN/Dockerfile
@@ -7,6 +7,8 @@ RUN pip freeze > requirements.txt
 
 RUN pip install requests
 
+RUN pip install parameterized
+
 RUN pip install -r requirements.txt
 
 CMD ["python", "./test_tateti.py"]
